--- a/oaclab2/Lab2MipsUnicycle.qsf
+++ b/oaclab2/Lab2MipsUnicycle.qsf
@@ -79,4 +79,6 @@ set_global_assignment -name BDF_FILE and5_1bit.bdf
 set_global_assignment -name BDF_FILE alucontrol.bdf
 set_global_assignment -name BDF_FILE signextend16to32bit.bdf
 set_global_assignment -name BDF_FILE 32writeenabledflipflop32bit2input.bdf
+set_global_assignment -name VHDL_FILE intructions_memory.vhd
+set_global_assignment -name VHDL_FILE instructionsmemory.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
